name:                bytestring-twiddle
version:             0.1.0.0
synopsis:            bit twiddling optimisations for bytestrings
-- description:
homepage:            https://github.com/chessai/bytestring-twiddle
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.ByteString.Twiddle
  build-depends:       base >=4.5 && <4.13, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
